[gd_scene load_steps=8 format=3 uid="uid://d35mkt151iibu"]

[ext_resource type="Script" path="res://levels/level_manager.gd" id="1_i7j4s"]
[ext_resource type="PackedScene" uid="uid://bjpjcc0s4kjoa" path="res://levels/level3.tscn" id="1_s122t"]
[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_tccqs"]
[ext_resource type="PackedScene" uid="uid://bax71luhrk8ce" path="res://levels/level1.tscn" id="3_tf0hy"]
[ext_resource type="FontFile" uid="uid://dobxhjlvga3ci" path="res://menu/font.ttf" id="4_n0i7o"]
[ext_resource type="Script" path="res://menu/level_button.gd" id="4_n34nd"]

[sub_resource type="ViewportTexture" id="ViewportTexture_54dbo"]
viewport_path = NodePath("LevelManager")

[node name="MainScene" type="CanvasLayer"]
script = ExtResource("1_tccqs")

[node name="LevelManager" type="SubViewport" parent="."]
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(112, 160)
script = ExtResource("1_i7j4s")
levels = Array[PackedScene]([ExtResource("3_tf0hy"), ExtResource("1_s122t")])

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GameScreen" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("ViewportTexture_54dbo")
expand_mode = 2
stretch_mode = 5

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="GridContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -111.0
offset_right = 353.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 100
columns = 4
metadata/_edit_lock_ = true

[node name="Level1" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "1"
script = ExtResource("4_n34nd")
main_scene = NodePath("../../..")

[node name="Level2" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "2"
script = ExtResource("4_n34nd")
level_index = 1
main_scene = NodePath("../../..")

[node name="Level3" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "3"
script = ExtResource("4_n34nd")
level_index = 2
main_scene = NodePath("../../..")

[node name="Level4" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "4"
script = ExtResource("4_n34nd")
level_index = 3
main_scene = NodePath("../../..")

[node name="Level5" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "5"
script = ExtResource("4_n34nd")
level_index = 4
main_scene = NodePath("../../..")

[node name="Level6" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "6
"
script = ExtResource("4_n34nd")
level_index = 5
main_scene = NodePath("../../..")

[node name="Level7" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "7
"
script = ExtResource("4_n34nd")
level_index = 6
main_scene = NodePath("../../..")

[node name="Level8" type="Button" parent="MainMenu/ItemList" node_paths=PackedStringArray("main_scene")]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_n0i7o")
theme_override_font_sizes/font_size = 100
text = "8"
script = ExtResource("4_n34nd")
level_index = 7
main_scene = NodePath("../../..")
