[gd_scene load_steps=5 format=3 uid="uid://cjb3aecgp5pw3"]

[ext_resource type="FontFile" uid="uid://dobxhjlvga3ci" path="res://menu/font.ttf" id="1_8mqyt"]
[ext_resource type="Script" path="res://menu/level_button.gd" id="2_ej51k"]
[ext_resource type="AudioStream" uid="uid://b0ccbqfympsfl" path="res://audio/button_hover.wav" id="3_23aul"]
[ext_resource type="AudioStream" uid="uid://c3c4w7s08bxfo" path="res://audio/button_click.wav" id="4_acj01"]

[node name="Level1" type="Button"]
theme_override_fonts/font = ExtResource("1_8mqyt")
theme_override_font_sizes/font_size = 100
text = "1"
script = ExtResource("2_ej51k")

[node name="HoverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_23aul")

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_acj01")
